--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "rm -rf output/* allure-report allure-results",
     "lint": "eslint --quiet --fix --ext .js .",
     "format": "prettier --write ./src/**/*.{js,json}",
+    "report": "allure open ${ALLURE_PORT:+-p $ALLURE_PORT}",
     "test": "wdio run ./wdio.conf.js"
   },
   "devDependencies": {
